--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="first">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="second">
+      <div>
+        <div></div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class="third">
+      <div></div>
+      <div>
+        <div></div>
+        <div>
+          <div></div>
+          <div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
