--- a/float.html
+++ b/float.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>hillel_hw-27.11.2023</title>
+  <title>Document</title>
 </head>
 <body>
-  <div class="container container-outline">
-    <div class="first">
+  <div class="container container-outline float-container">
+    <div class="first-float clearfix">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div class="second">
+    <div class="second-float clearfix">
       <div>
         <div></div>
         <div></div>
@@ -24,11 +24,11 @@
         <div></div>
       </div>
     </div>
-    <div class="third">
+    <div class="third-float clearfix">
       <div></div>
       <div>
         <div></div>
-        <div>
+        <div class="clearfix">
           <div></div>
           <div>
             <div></div>
@@ -37,7 +37,7 @@
         </div>
       </div>
     </div>
-    <a href="float.html"><p>To the float homework</p></a>
+    <a href="index.html" class="link-float"><p>To the inline-block homework</p></a>
   </div>
 </body>
 </html>
