--- a/flex.html
+++ b/flex.html
@@ -7,13 +7,13 @@
   <title>Flex homework</title>
 </head>
 <body>
-  <div class="container container-outline">
-    <div class="flex-item">
+  <div class="container container-outline flex-container">
+    <div class="first-flex-item">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div class="flex-item">
+    <div class="second-flex-item">
       <div>
         <div></div>
         <div></div>
@@ -24,11 +24,11 @@
         <div></div>
       </div>
     </div>
-    <div class="flex-item">
+    <div class="third-flex-item">
       <div></div>
       <div>
         <div></div>
-        <div>
+        <div class="third-flex-item-div">
           <div></div>
           <div>
             <div></div>
