--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
     <a href="float.html"><p>To the float homework</p></a>
+    <a href="flex.html"><p>To the flex homework</p></a>
   </div>
 </body>
 </html>
