--- a/float.html
+++ b/float.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Float homework</title>
 </head>
 <body>
   <div class="container container-outline float-container">
@@ -38,6 +38,7 @@
       </div>
     </div>
     <a href="index.html" class="link-float"><p>To the inline-block homework</p></a>
+    <a href="flex.html" class="link-float"><p>To the flex homework</p></a>
   </div>
 </body>
 </html>
