--- a/galery.html
+++ b/galery.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>hillel_hw-27.11.2023</title>
+  <title>Document</title>
 </head>
 <body>
   
-  </div>
 </body>
 </html>
